src/app/widgets/JogControl/numberInput.styl
/*
 * Copyright (C) 2021 Sienci Labs Inc.
 *
 * This file is part of gSender.
 *
 * gSender is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, under version 3 of the License.
 *
 * gSender is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with gSender.  If not, see <https://www.gnu.org/licenses/>.
 *
 * Contact for information regarding this program and its license
 * can be sent through gSender@sienci.com or mailed to the main office
 * of Sienci Labs Inc. in Waterloo, Ontario, Canada.
 *
 */

.input-wrapper {
  min-width: 100px;
  display flex;
  flex-direction: row;
  width: 100%;
  align-items: stretch;
  flex-grow: 1;
  border: 1px solid #d8d8d8;
  height: 2.25rem;

  input {
    text-align: center;
    width: 75%;
    margin: 0;
    padding: 0;
    font-size: 1rem;
    border: none;

    &:focus {
      outline: none;
    }
  }
}

.control-wrapper {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;

  span {
    font-weight: bold;
  }

  button + button {
    margin-left: 0;
  }
}

.step-button {
  border: none;
  position: relative;
  text-align: center;
  min-width: 25px;
  font-size: 10px;
  outline: none;
  display: flex;
  flex-grow: 1;
  margin: 0;
  padding: .25rem;
  border-radius: 0;
  flex-direction: column;
  height: 100%;
}

